--- a/css/layout.css
+++ b/css/layout.css
@@ -637,8 +637,8 @@ html {
   
   /* Navbar Logo */
   .header .logo {
-    width: 150px;
-    height: 150px;
+    width: 180px;
+    height: 180px;
     float: left;
     max-height: 95px;
     line-height: 65px;
@@ -655,11 +655,11 @@ html {
   
   .header .logo-img {
     display: inline-block;
-    width: 146px;
+    width: 200px;
     height: auto;
     max-width: 100%;
     max-height: 100%;
-    vertical-align: middle;
+    vertical-align:middle;
   }
   
   .header .logo-img-main {
@@ -1015,7 +1015,7 @@ html {
   .carousel-title {
     font-size: 80px;
     font-weight: 700;
-    color:#f0f0f0;
+    color: #eff2f5;
     line-height: 1.1;
     text-transform: uppercase;
   }
@@ -1063,7 +1063,10 @@ html {
   }
   
   .color-white {
-    color: rgb(255, 255, 255) !important;
+    color: rgb(232, 236, 236) !important;
+    font-size: large;
+   font-variant: inherit;
+   font-stretch: extra-expanded;
   }
   
   .color-heading {
